--- a/pages/Preguntasfrecuentes.html
+++ b/pages/Preguntasfrecuentes.html
@@ -7,14 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Servicios</title>
 	<link rel="shortcut icon" href="../img/coder.jpg" type="image/x-icon">
-	<!-- CSS -->
-	<link rel="stylesheet" href="../css/estilo.css">
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<!-- KEYWORDS -->
-        <meta name="description" content="Tienda de ropa">
-        <meta name="keywords" content="Mujer,Ropa femenina,">
+	<!-- CSS -->
+	<link rel="stylesheet" href="../css/estilo.css">
+	<!-- KEYWORDS -->
+	<meta name="description" content="Tienda de ropa">
+	<meta name="keywords" content="Mujer,Ropa femenina,">
 
 </head>
 <header class="navBackground">
@@ -63,8 +63,8 @@
 	</div>
 	<div class="accordion-item">
 		<h2 class="accordion-header" id="headingTwo">
-			<button class="collapsed" type="button" data-bs-toggle="collapse"
-				data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+			<button class="collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+				aria-expanded="false" aria-controls="collapseTwo">
 				¿Hacemos punto de encuentro?
 			</button>
 		</h2>
@@ -77,8 +77,8 @@
 	</div>
 	<div class="accordion-item">
 		<h2 class="accordion-header" id="headingThree">
-			<button class="collapsed" type="button" data-bs-toggle="collapse"
-				data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+			<button class="collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+				aria-expanded="false" aria-controls="collapseThree">
 				¿Tienen devolucion las prendas?
 			</button>
 		</h2>
@@ -88,7 +88,7 @@
 				<strong>Si! Siempre y cuando esten igual que como se mandaron</strong>
 			</div>
 		</div>
-		
+
 	</div>
 </div>
 
