--- a/pages/Stock.html
+++ b/pages/Stock.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
     <link rel="shortcut icon" href="../img/coder.jpg" type="image/x-icon">
-    <!-- CSS -->
-    <link rel="stylesheet" href="../css/estilo.css">
+        <!-- CSS -->
+        <link rel="stylesheet" href="../css/estilo.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- KEYWORDS -->
-        <meta name="description" content="Tienda de ropa">
-        <meta name="keywords" content="Mujer,Ropa femenina,">
+    <!-- KEYWORDS -->
+    <meta name="description" content="Tienda de ropa">
+    <meta name="keywords" content="Mujer,Ropa femenina,">
 
 </head>
 <header class="navBackground">
@@ -55,7 +55,7 @@
         <h3 class="titulostock">Para entrega inmediata</h3>
         <div class="stockimgContenedor row mt-4">
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen1.jpg" class="rounded-3  border border-4 stockimg" alt="Conjunto de encaje 1">
+                <img src="../img/imagen1.jpg" class="card-img-top  rounded-3  border border-4 stockimg" alt="Conjunto de encaje 1">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen3.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen3.jpg" class="card-img-top  rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 3">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen4.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen4.jpg" class="card-img-top  rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 4">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen5.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen5.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 5">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen6.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen6.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 6">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen7.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen7.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 7">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen8.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen8.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 8">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen9.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen9.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 9">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen10.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen10.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 10">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen11.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen11.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 11">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen12 (1).jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen12 (1).jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 12">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen13.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen13.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 13">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen14.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen14.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 14">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen15.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen15.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 15">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen16.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen16.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 16">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen17.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen17.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 17">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen18.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                <img src="../img/imagen18.jpg" class="card-img-top rounded-3 gap-3 border border-4 stockimg"
                     alt="Conjunto de encaje 18">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
