--- a/pages/Preguntasfrecuentes.html
+++ b/pages/Preguntasfrecuentes.html
@@ -15,103 +15,103 @@
 	<!-- KEYWORDS -->
 	<meta name="description" content="Tienda de ropa">
 	<meta name="keywords" content="Mujer,Ropa femenina,">
-
 </head>
-<header class="navBackground">
-	<h1 class="tiendaDeRopa">Lingerie Fabuleux</h1>
-	<nav class="navbar navbar-expand-lg navbar-light">
-		<div class="container-fluid">
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-					<li class="listas">
-						<a class="nav-link" href="../index.html">Inicio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="stock.html">Stock</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contacto.html">Contacto</a>
-					<li class="nav-item">
-						<a class="nav-link" href="ubicacion.html">Ubicacion</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
-					</li>
 
-				</ul>
-</header>
 <body>
-<div class="accordion" id="accordionExample">
-	<div class="accordion-item">
-		<h2 class="accordion-header" id="headingOne">
-			<button class="accordion" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-				aria-expanded="true" aria-controls="collapseOne">
-				¿Hacemos Envios?
-			</button>
-		</h2>
-		<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-			data-bs-parent="#accordionExample">
-			<div class="accordion-body , text-center">
-				<strong>Si! A todo el pais a través de oca</strong> cualquier duda preguntanos ! <a
-					class="text-decoration-none" href="contacto.html">Contacto</a>
+	<header class="navBackground">
+		<h1 class="tiendaDeRopa">Lingerie Fabuleux</h1>
+		<nav class="navbar navbar-expand-lg navbar-light">
+			<div class="container-fluid">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+						<li class="listas">
+							<a class="nav-link" href="../index.html">Inicio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="stock.html">Stock</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contacto.html">Contacto</a>
+						<li class="nav-item">
+							<a class="nav-link" href="ubicacion.html">Ubicacion</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
+						</li>
+
+					</ul>
+	</header>
+	<div class="accordion" id="accordionExample">
+		<div class="accordion-item">
+			<h2 class="accordion-header" id="headingOne">
+				<button class="accordion" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+					aria-expanded="true" aria-controls="collapseOne">
+					¿Hacemos Envios?
+				</button>
+			</h2>
+			<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+				data-bs-parent="#accordionExample">
+				<div class="accordion-body , text-center">
+					<strong>Si! A todo el pais a través de oca</strong> cualquier duda preguntanos ! <a
+						class="text-decoration-none" href="contacto.html">Contacto</a>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="accordion-item">
-		<h2 class="accordion-header" id="headingTwo">
-			<button class="collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-				aria-expanded="false" aria-controls="collapseTwo">
-				¿Hacemos punto de encuentro?
-			</button>
-		</h2>
-		<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-			data-bs-parent="#accordionExample">
-			<div class="accordion-body , text-center">
-				<strong>Si! Con coordinación previa</strong>
+		<div class="accordion-item">
+			<h2 class="accordion-header" id="headingTwo">
+				<button class="collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+					aria-expanded="false" aria-controls="collapseTwo">
+					¿Hacemos punto de encuentro?
+				</button>
+			</h2>
+			<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+				data-bs-parent="#accordionExample">
+				<div class="accordion-body , text-center">
+					<strong>Si! Con coordinación previa</strong>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="accordion-item">
-		<h2 class="accordion-header" id="headingThree">
-			<button class="collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
-				aria-expanded="false" aria-controls="collapseThree">
-				¿Tienen devolucion las prendas?
-			</button>
-		</h2>
-		<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-			data-bs-parent="#accordionExample">
-			<div class="accordion-body , text-center">
-				<strong>Si! Siempre y cuando esten igual que como se mandaron</strong>
+		<div class="accordion-item">
+			<h2 class="accordion-header" id="headingThree">
+				<button class="collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+					aria-expanded="false" aria-controls="collapseThree">
+					¿Tienen devolucion las prendas?
+				</button>
+			</h2>
+			<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+				data-bs-parent="#accordionExample">
+				<div class="accordion-body , text-center">
+					<strong>Si! Siempre y cuando esten igual que como se mandaron</strong>
+				</div>
 			</div>
+
 		</div>
-
 	</div>
-</div>
 
-
-</nav>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
-<div class="footer">
-	<footer class="py-3 my-4">
-		<ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
-			<li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
-			<li class="nav-item"><a href="Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
-			<li class="nav-item"><a href="Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
-			<li class="nav-item"><a href="Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
-					Frecuentes</a></li>
-			<li class="nav-item"><a href="ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
-		</ul>
-		<p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
-	</footer>
-</div>	
+	</nav>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+	</script>
+	<div class="footer">
+		<footer class="py-3 my-4">
+			<ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
+				<li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+				<li class="nav-item"><a href="Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
+				<li class="nav-item"><a href="Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+				<li class="nav-item"><a href="Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
+						Frecuentes</a></li>
+				<li class="nav-item"><a href="ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
+			</ul>
+			<p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
+		</footer>
+	</div>
 </body>
+
 
 
 </html>
