--- a/pages/Stock.html
+++ b/pages/Stock.html
@@ -7,55 +7,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Lingerie Fabuleux</title>
     <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
-        <!-- CSS -->
-        <link rel="stylesheet" href="../css/estilo.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/estilo.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- KEYWORDS -->
     <meta name="description" content="Tienda de ropa">
     <meta name="keywords" content="Mujer,Ropa femenina,">
-
 </head>
-<header class="navBackground">
-    <h1 class="tiendaDeRopa">Lingerie Fabuleux</h1>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="listas">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="stock.html">Stock</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
-                    </li>
-
-                </ul>
-</header>
-
 
 <body>
+    <header class="navBackground">
+        <h1 class="tiendaDeRopa">Lingerie Fabuleux</h1>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="listas">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="stock.html">Stock</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                        </li>
 
+                    </ul>
+    </header>
     <main>
         <h2 class="titulostock">Stock</h2>
 
         <h3 class="titulostock">Para entrega inmediata</h3>
         <div class="stockimgContenedor row mt-4">
             <div class="card" style="width: 18rem;">
-                <img src="../img/imagen1.jpg" class="card-img-top  rounded-3  border border-4 stockimg" alt="Conjunto de encaje 1">
+                <img src="../img/imagen1.jpg" class="card-img-top  rounded-3  border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -197,10 +195,11 @@
                     <strong class="precioStock">$1500</strong>
                 </div>
     </main>
+</body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 <div class="footer">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
@@ -214,6 +213,5 @@
         <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
     </footer>
 </div>
-</body>
 
 </html>
